--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
 		"@babel/core": "^7.15.0",
 		"@babel/preset-env": "^7.15.0",
 		"babel-loader": "^8.2.2",
+		"clean-webpack-plugin": "^4.0.0",
 		"css-loader": "^6.2.0",
+		"html-loader": "^2.1.2",
+		"html-webpack-plugin": "^5.3.2",
 		"mini-css-extract-plugin": "^2.2.1",
 		"postcss": "^8.3.6",
 		"postcss-loader": "^6.1.1",
